27_matrix_input/grade.txt
Grading at Mon Mar 11 16:40:30 UTC 2019
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:38:9: error: implicit declaration of function ‘strchr’ [-Werror=implicit-function-declaration]
     if (strchr(line, '\n') == NULL) {
         ^
rotateMatrix.c:38:9: error: incompatible implicit declaration of built-in function ‘strchr’ [-Werror]
rotateMatrix.c:38:9: note: include ‘<string.h>’ or provide a declaration of ‘strchr’
rotateMatrix.c:53:7: error: ‘matrix’ undeclared (first use in this function)
       matrix[height][i] = line[i];
       ^
rotateMatrix.c:53:7: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
